css/bar-ui.css
/* ... */
/* playback speed toggle button displaying text like "1x" */
.sm2-inline-button.speed {
  line-height: 2.8em;
  font-weight: bold;
  font-size: 110%;
  text-align: center;
}

.sm2-extra-controls .repeat {
  background-position: 50% 45%;
}

.sm2-progress-ball .icon-overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-image: url(../img/spinner.svg);
  filter: var(--background-invert-if-dark);
  background-size: 72%;
  background-position: 50%;
  background-repeat: no-repeat;
  display: none;
}

.playing.buffering .sm2-progress-ball .icon-overlay {
  display: block;
  -webkit-animation: spin 0.6s linear infinite;
  animation: spin 0.6s linear infinite;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@-moz-keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.sm2-element ul {
  font-size: 95%;
  list-style-type: none;
}

.sm2-element ul,
.sm2-element ul li {
  margin: 0;
  padding: 0;
}

.bd.sm2-playlist-drawer {
  z-index: 3;
  border-radius: 0;
  width: 100%;
  height: 0;
  border: none;
  background-image: none;
  display: block;
  overflow: hidden;
  transition: height 0.2s ease-in-out;
}

.sm2-bar-ui.fixed .bd.sm2-playlist-drawer,
.sm2-bar-ui.bottom .bd.sm2-playlist-drawer {
  position: absolute;
}

.sm2-bar-ui.fixed .sm2-playlist-wrapper,
.sm2-bar-ui.bottom .sm2-playlist-wrapper {
  padding-bottom: 0;
}

.sm2-bar-ui.fixed .bd.sm2-playlist-drawer,
.sm2-bar-ui.bottom .bd.sm2-playlist-drawer {
  /* show playlist on top */
  top: 2.8em;
}

.sm2-bar-ui .bd.sm2-playlist-drawer {
  opacity: 0.5;
  transform: translateZ(0);
}

.sm2-bar-ui.playlist-open .bd.sm2-playlist-drawer {
  opacity: 1;
}

.sm2-bar-ui.playlist-open .bd.sm2-playlist-drawer a {
  -webkit-filter: none; /* blur(0px) was still blurred on retina displays, as of 07/2014 */
}

.sm2-bar-ui.fixed.playlist-open .bd.sm2-playlist-drawer .sm2-playlist-wrapper,
.sm2-bar-ui.bottom.playlist-open .bd.sm2-playlist-drawer .sm2-playlist-wrapper {
  padding-bottom: 0.5em;
  box-shadow: none;
}

.sm2-bar-ui .bd.sm2-playlist-drawer {
  transition: all 0.2s ease-in-out;
  transition-property: transform, height, opacity, background-color, -webkit-filter;
}

.sm2-bar-ui .bd.sm2-playlist-drawer a {
  transition: -webkit-filter 0.2s ease-in-out;
}

.sm2-bar-ui .bd.sm2-playlist-drawer .sm2-inline-texture {
  background-position: 0 -2.8em;
}

.sm2-box-shadow {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.15);
}

.sm2-playlist-wrapper {
  position: relative;
  padding: 0.5em 0.5em 0.5em 0.25em;
  background-image: none, none;
}

.sm2-playlist-wrapper ul {
  max-height: 9.25em;
  overflow: auto;
}

.sm2-playlist-wrapper ul li {
  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
}

.sm2-playlist-wrapper ul li:nth-child(odd) {
  background-color: rgba(255, 255, 255, 0.03);
}

.sm2-playlist-wrapper ul li a {
  display: block;
  padding: 0.5em 0.25em 0.5em 0.75em;
  margin-right: 0.5em;
  font-size: 90%;
  vertical-align: middle;
}

.sm2-playlist-wrapper ul li a.sm2-exclude {
  display: inline-block;
}

.sm2-playlist-wrapper ul li a.sm2-exclude .label {
  font-size: 95%;
  line-height: 1em;
  margin-left: 0;
  padding: 2px 4px;
}

.sm2-playlist-wrapper ul li:hover a {
  background-color: rgba(0, 0, 0, 0.20);
}

.sm2-bar-ui.dark-text .sm2-playlist-wrapper ul li:hover a {
  background-color: rgba(255, 255, 255, 0.1);
}

.sm2-playlist-wrapper ul li.selected a {
  background-color: rgba(0, 0, 0, 0.25);
}

.sm2-bar-ui.dark-text ul li.selected a {
  background-color: rgba(255, 255, 255, 0.1);
}

.sm2-bar-ui .disabled {
  filter: alpha(opacity=33); /* <= IE 8 */
  opacity: 0.33;
}

.sm2-bar-ui .bd .sm2-button-element.disabled:hover {
  background-color: transparent;
}

.sm2-bar-ui .active,
.sm2-bar-ui.playlist-open .sm2-menu:hover {
  box-shadow: none;
  background-image: none;
}

.firefox-fix {
  position: relative;
  display: inline-block;
  width: 100%;
  height: 100%;
}

.sm2-playlist-wrapper ul::-webkit-scrollbar {
  width: 10px;
}

.sm2-playlist-wrapper ul::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.33);
  border-radius: 10px;
}

.sm2-playlist-wrapper ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background: #333;
}

.sm2-extra-controls {
  font-size: 0;
  text-align: center;
}

.sm2-bar-ui .label {
  position: relative;
  display: inline-block;
  font-size: 0.7em;
  margin-left: 0.25em;
  vertical-align: top;
  background-color: rgba(0, 0, 0, 0.6);
  border-radius: 3px;
  padding: 0 3px;
  /*box-sizing: padding-box;*/
}

.sm2-bar-ui.dark-text .label {
  background-color: rgba(0, 0, 0, 0.1);
}

.sm2-bar-ui .sm2-playlist-drawer .label {
  font-size: 0.8em;
  padding: 0 3px;
}

.sm2-bar-ui .sm2-inline-element {
  display: table-cell;
}

.sm2-bar-ui .sm2-inline-status {
  /* full width */
  width: 100%;
  min-width: 100%;
  max-width: 100%;
}

.sm2-bar-ui > .bd {
  width: 100%;
}

.sm2-bar-ui .sm2-playlist-drawer {
  /* re-hide playlist */
  display: block;
  overflow: hidden;
}

.sm2-bar-ui .sm2-main-controls,
.sm2-bar-ui .sm2-playlist-drawer {
  background-color: #ccc;
}

.sm2-bar-ui .sm2-inline-texture {
  background: transparent;
}

/* Redesigned player layout */
#sm2-bar-ui.redesign .bd.sm2-main-controls {
  display: flex;
  align-items: center;
  height: 100px;
  padding: 10px;
}

#sm2-bar-ui.redesign .menu-icon {
  margin-right: 10px;
}

#sm2-bar-ui.redesign .ap-left,
#sm2-bar-ui.redesign .ap-middle,
#sm2-bar-ui.redesign .ap-right {
  display: flex;
  align-items: center;
}

#sm2-bar-ui.redesign .ap-left { flex: 0 0 30%; }
#sm2-bar-ui.redesign .ap-middle { flex: 0 0 50%; flex-direction: column; justify-content: center; text-align: center; }
/* ... */

